[project]
name = "volto_turnstile_documentation"
description = "An integration for the Cloudflare Turnstile service with Volto"
readme = "README.md"
license = "CC-BY-4.0"
license-files = ["LICENSE.md"]
authors = [
    { name = "Leonardo J. Caballero G.", email = "leonardocaballero@gmail.com" },
]
maintainers = [
    { name = "Leonardo J. Caballero G.", email = "leonardocaballero@gmail.com" },
]
keywords = [
    "CMS",
    "Volto",
    "React",
    "Cloudflare",
    "Turnstile",
    "integration",
    "documentation",
]
version="1.0.0"
requires-python = ">=3.10,<3.14"
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Web Environment",
    "Framework :: Plone",
    "Framework :: Plone :: 6.0",
    "Framework :: Plone :: 6.1",
    "Framework :: Plone :: Addon",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Email",
    "Topic :: Communications :: Email :: Mailing List Servers",
    "Topic :: Internet :: WWW/HTTP",
]

[dependency-groups]
dev = [
    "graphviz",
    "linkify-it-py",
    "myst-parser",
    "plone-sphinx-theme>=1.4.1",  # Use the latest stable version or a minimum
    "setuptools",  # required by sphinxcontrib.httpexample, remove when it migrates to importlib. See https://github.com/collective/sphinxcontrib-httpexample/issues/106
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-examples",
    "sphinx-notfound-page",
    "sphinx-reredirects",
    "sphinx-sitemap",
    "sphinx-tippy",
    "sphinxcontrib-httpdomain",
    "sphinxcontrib-httpexample",
    "sphinxcontrib-mermaid",
    "sphinxcontrib-video",
    "sphinxcontrib-youtube",
    "sphinxext-opengraph",
    "vale",
]

[project.urls]
Repository = "https://github.com/collective/volto-turnstile"
Source = "https://github.com/collective/volto-turnstile"
Tracker = "https://github.com/collective/volto-turnstile/issues"
Documentation = "https://volto-turnstile.readthedocs.io/"
Changelog = "https://github.com/collective/volto-turnstile/blob/main/CHANGELOG.md"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["styles"]
